--- a/public/src/app/views/wizard/wizard.component.scss
+++ b/public/src/app/views/wizard/wizard.component.scss
@@ -1,9 +1,16 @@
-.sidebar {
-  min-width: 400px;
+.excel-table-parent {
+  position: relative;
+  height: calc(100% - 64px);
+  width: 100%;
+  overflow: auto;
+}
+.excel-table {
+  width: fit-content;
+  padding-top: 1px;
 }
 
-.excel-table {
-  display: flex;
+.sidebar {
+  min-width: 400px;
 }
 
 .column {
@@ -16,23 +23,22 @@
 }
 
 .cell {
-  height: 30px;
-  width: 100%;
+  display: inline-block;
+  height: 100%;
   padding: 5px;
   margin-top: -1px;
   margin-left: -1px;
-  text-align: right;
   overflow: hidden;
   text-overflow: ellipsis;
   border: 1px solid #E1E1E1;
 }
 
 .cell-border {
-  min-width: 10px;
   width: 30px;
   height: 30px;
   text-align: center;
-  border: 1px solid #E1E1E1
+  border: 1px solid #E1E1E1;
+  background-color: whitesmoke;
 }
 
 .cell-active-hover:hover {
@@ -52,4 +58,7 @@
 
 .miw-0 {
   min-width: 0;
+}
+.excel-row {
+  display: flex;
 }
